WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69315
REGRESSION(
r94274
): setting input.value erroneously triggers focus event
https://bugs.webkit.org/show_bug.cgi?id=69315
Summary
REGRESSION(r94274): setting input.value erroneously triggers focus event
Ryosuke Niwa
Reported
2011-10-03 19:10:59 PDT
After
http://trac.webkit.org/changeset/94274
, WebKit sets focus on an input element when setting the value attribute of the element if the element has a selection in its inner text element.
http://b/issue?id=5362152
Attachments
manual test
(1000 bytes, text/html)
2011-10-03 20:32 PDT
,
Ryosuke Niwa
no flags
Details
Patch
(3.99 KB, patch)
2011-10-03 20:38 PDT
,
Ryosuke Niwa
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-10-03 20:32:56 PDT
Created
attachment 109577
[details]
manual test I've spent last 1.5 hours trying to create a reproduction without a success. It seems like I'd have to create a manual test here :(
Ryosuke Niwa
Comment 2
2011-10-03 20:38:31 PDT
Created
attachment 109578
[details]
Patch
Kent Tamura
Comment 3
2011-10-03 23:22:03 PDT
Comment on
attachment 109578
[details]
Patch The change looks good, but why did
r94274
make the problem?
Ryosuke Niwa
Comment 4
2011-10-03 23:40:22 PDT
(In reply to
comment #3
)
> (From update of
attachment 109578
[details]
) > The change looks good, but why did
r94274
make the problem?
r94274
added a call to updateInnerTextValue in setValue. We used to update the inner text value in updateFromElement so this had never been an issue (although we may had a use-after-free back then).
Kent Tamura
Comment 5
2011-10-04 00:10:30 PDT
Comment on
attachment 109578
[details]
Patch ok, I understand.
Kent Tamura
Comment 6
2011-10-04 01:51:29 PDT
I have just remembered
Bug 59071
. I can remove the change for
Bug 59071
when this patch is landed.
Ryosuke Niwa
Comment 7
2011-10-04 12:01:42 PDT
Committed
r96628
: <
http://trac.webkit.org/changeset/96628
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug